--- a/2 - Data Analitics for Smart Grids/Projeto 2/Aula7_StateEstimation_Students.ipynb
+++ b/2 - Data Analitics for Smart Grids/Projeto 2/Aula7_StateEstimation_Students.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,26 +86,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Impedance:\n",
-      "[0.025 +0.0125j 0.0375+0.0175j 0.05  +0.025j ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Consumption dataset\n",
     "s=  [[0.0450,    0.0150,    0.0470,    0.0330],\n",
@@ -130,9 +116,6 @@
     "#Impedance\n",
     "z=np.multiply([complex(0.1,0.05),complex(0.15,0.07),complex(0.2,0.1)],netFactor)\n",
     "\n",
-    "print(\"Impedance:\")\n",
-    "print(z)\n",
-    "\n",
     "vr=1 #Reference voltage\n",
     "el=1\n",
     "ni=20 #Iterations for the Power Flow\n",
@@ -149,9 +132,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.01600324-0.00064327j  0.01600324-0.00064327j  0.01600324-0.00064327j\n",
+      "   0.        -0.j        ]\n",
+      " [-0.02336032-0.04078693j -0.02336032-0.04078693j -0.02336032-0.04078693j\n",
+      "  -0.        +0.j        ]\n",
+      " [-0.09305042+0.16387746j -0.09305042+0.16387746j -0.0225541 +0.04041945j\n",
+      "  -0.0225541 +0.04041945j]]\n"
+     ]
+    }
+   ],
    "source": [
     "def pf3ph(t,z,si,vr,el,ni,al):\n",
     "    #Matrices creation\n",
@@ -199,7 +195,8 @@
     "            vn[:,n-1]=vn[:,m-1]-z[k]*inn[n-1]     #Neutral Voltage \n",
     "            vp[:,n-1]=vp[:,m-1]-z[k]*ip[:,n-1]    #Phase Voltage\n",
     "        ia=ip             #Save the current of previous iteration\n",
-    "\n"
+    "\n",
+    "print (ip)"
    ]
   },
   {
@@ -211,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -220,47 +217,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The values of the voltages are:\n",
-      " [ 1.00256392-0.01072892j -0.49248567-0.87251786j -0.48057951+0.84937025j]\n",
-      "\n",
       "The values of the currents are:\n",
       " [[ 0.07666399-0.00064047j  0.07666399-0.00064047j  0.07666399-0.00064047j\n",
       "   0.        -0.j        ]\n",
       " [-0.0141556 -0.02483195j -0.0141556 -0.02483195j -0.0141556 -0.02483195j\n",
       "  -0.        +0.j        ]\n",
       " [-0.12640751+0.22194277j -0.12640751+0.22194277j -0.03759005+0.06643618j\n",
-      "  -0.03759005+0.06643618j]]\n",
-      "\n",
-      "The values of the average power are:\n",
-      " [0.17908333 0.02858333 0.07666667 0.07633333]\n",
-      "\n",
-      "The averaged voltage values (3 groups of 4 measurements each):\n",
-      " [[ 0.99385 -0.020175j -0.494875-0.879325j -0.4789  +0.83915j ]\n",
-      " [ 1.008925-0.007025j -0.489725-0.870675j -0.478625+0.851925j]\n",
-      " [ 1.0044  -0.00535j  -0.493325-0.86805j  -0.4851  +0.856j   ]]\n"
+      "  -0.03759005+0.06643618j]]\n"
      ]
     }
    ],
    "source": [
-    "v_asterisco = np.array([\n",
-    "    [0.9987 - 0.0048j, -0.4983 - 0.8684j, -0.4939 + 0.8596j],\n",
-    "    [0.9729 - 0.0160j, -0.5114 - 0.8738j, -0.5074 + 0.8546j],\n",
-    "    [0.9561 - 0.0244j, -0.5189 - 0.8775j, -0.5133 + 0.8491j],\n",
-    "    [1.0477 - 0.0355j, -0.4509 - 0.8976j, -0.4010 + 0.7933j],\n",
-    "    [1.0158 - 0.0100j, -0.4830 - 0.8724j, -0.4657 + 0.8443j],\n",
-    "    [1.0097 - 0.0070j, -0.4892 - 0.8706j, -0.4777 + 0.8517j],\n",
-    "    [1.0060 - 0.0054j, -0.4928 - 0.8699j, -0.4848 + 0.8557j],\n",
-    "    [1.0042 - 0.0057j, -0.4939 - 0.8698j, -0.4863 + 0.8560j],\n",
-    "    [1.0058 - 0.0100j, -0.4910 - 0.8734j, -0.4791 + 0.8494j],\n",
-    "    [1.0007 - 0.0054j, -0.4963 - 0.8685j, -0.4901 + 0.8578j],\n",
-    "    [1.0048 - 0.0028j, -0.4936 - 0.8648j, -0.4866 + 0.8590j],\n",
-    "    [1.0063 - 0.0032j, -0.4924 - 0.8655j, -0.4846 + 0.8578j]\n",
-    "])\n",
-    "\n",
-    "# v0 should represent the voltage at bus 4 (zv) calculated from the average currents\n",
-    "v0 = np.zeros((m, 3), dtype=complex)  # Create a matrix with the right dimensions and dtype\n",
-    "\n",
-    "\n",
     "al=np.exp(np.multiply(np.multiply(complex(0,-1),2/3),np.pi)) #Phase Angle\n",
     "sp=np.mean(s[0:m,:], axis=0) #Average power in each phase (i0)\n",
     "\n",
@@ -270,32 +237,7 @@
     "\n",
     "zv=mvp[:,3]    #Voltage Measurement in Node 4 \n",
     "\n",
-    "print('The values of the voltages are:\\n',zv)\n",
-    "print('\\nThe values of the currents are:\\n',ip)\n",
-    "print('\\nThe values of the average power are:\\n',sp)\n",
-    "\n",
-    "# Calculate complex voltage averages for each group of 4 values\n",
-    "group_size = 4  # Split the 12 measurements into 3 groups of 4 each\n",
-    "num_groups = m // group_size  # Should be 3 groups\n",
-    "\n",
-    "# Initialize v0 with the correct shape (3×3) - each group average will have 3 complex values\n",
-    "v0 = np.zeros((num_groups, 3), dtype=complex)\n",
-    "\n",
-    "# Calculate averages for each group of 4 measurements\n",
-    "for g in range(num_groups):\n",
-    "    start_idx = g * group_size\n",
-    "    end_idx = start_idx + group_size  # This will be the next 4 measurements\n",
-    "    # Average the voltage values in this group (keeping the 3 phases)\n",
-    "    v0[g] = np.mean(v_asterisco[start_idx:end_idx, :], axis=0)\n",
-    "\n",
-    "print('\\nThe averaged voltage values (3 groups of 4 measurements each):\\n', v0)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# currents "
+    "print('The values of the currents are:\\n',ip)"
    ]
   },
   {
@@ -332,6 +274,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "i0\n",
+      " [0.17908333 0.02858333 0.07666667 0.07633333] \n",
+      "\n",
       "A\n",
       " [[-0.02332532+0.01540064j -0.00526924-0.06912659j  0.125     +0.06j\n",
       "  -0.1038814 +0.06992786j]\n",
@@ -340,115 +285,57 @@
       " [-0.04665064+0.03080127j -0.00526924-0.06912659j  0.0625    +0.03j\n",
       "  -0.20776279+0.13985572j]] \n",
       "\n",
-      "shape of dv after concatenation: (4, 3)\n",
-      "shape of dv after transpose: (3, 4)\n",
-      "dv\n",
-      " [[ 0.99385   -0.020175j    1.008925  -0.007025j    1.0044    -0.00535j\n",
-      "   1.00256392-0.01072892j]\n",
-      " [-0.494875  -0.879325j   -0.489725  -0.870675j   -0.493325  -0.86805j\n",
-      "  -0.49248567-0.87251786j]\n",
-      " [-0.4789    +0.83915j    -0.478625  +0.851925j   -0.4851    +0.856j\n",
-      "  -0.48057951+0.84937025j]] \n",
-      "\n",
-      "D\n",
-      " [[  31.18097285    0.            0.            0.        ]\n",
-      " [   0.         1223.97980433    0.            0.        ]\n",
-      " [   0.            0.          170.13232514    0.        ]\n",
-      " [   0.            0.            0.          171.62144124]] \n",
-      "\n",
-      "Shape of dv: (3, 4)\n",
       "di\n",
-      " [[ 6.78085752-3.34172911j  6.82962466-3.34701586j  6.85618917-3.34738905j\n",
-      "   6.82214685-3.34717476j]\n",
-      " [12.98060539-6.24297053j 12.98048886-6.24261636j 12.97279195-6.24248009j\n",
-      "  12.97785382-6.24269638j]\n",
-      " [12.82763333-6.2371832j  12.98514697-6.24068797j 12.97115462-6.24067256j\n",
-      "  12.92796042-6.24009586j]\n",
-      " [ 5.49497305-2.7692695j   5.5346285 -2.77392704j  5.55624789-2.77442386j\n",
-      "   5.52854081-2.77400204j]] \n",
+      " [[-0.07063578 -0.07494801 -0.05947192  0.37071222  0.05266028 -0.00441259\n",
+      "  -0.03711659 -0.0409737  -0.00065421 -0.05345588 -0.04466463 -0.03691581]\n",
+      " [-0.01358638 -0.01358794 -0.00361372  0.02044369  0.0174203  -0.00158692\n",
+      "  -0.01358608 -0.01258585 -0.01258607 -0.00558483  0.02041997  0.01841963]\n",
+      " [-0.02966751  0.17133351  0.31734107 -0.05666867 -0.06066563 -0.06066586\n",
+      "  -0.0596661  -0.0486663  -0.02666669 -0.03066678 -0.05466566 -0.0606655 ]\n",
+      " [-0.05749607 -0.06100614 -0.04840892  0.30175213  0.04286439 -0.00359176\n",
+      "  -0.03021214 -0.03335175 -0.00053252 -0.04351199 -0.03635609 -0.03004871]] \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Matrices Creation\n",
+    "#Matrices Creation\n",
     "it=np.zeros((3,m))\n",
     "ie=np.zeros((3,m))\n",
     "A=np.zeros((3,4), dtype=complex)\n",
     "dx=np.zeros((4,m), dtype=complex)\n",
     "\n",
-    "lambda_ = 1e-9 #Regularization parameter\n",
     "\n",
-    "W=[[2,1,1],[1,2,1],[1,1,2]]\n",
+    "W=[[2,1,1],\n",
+    "   [1,2,1],\n",
+    "   [1,1,2]]\n",
     "W = np.array(W)\n",
     "\n",
     "ds=s[0:m,:]-sp              #Difference from the average\n",
     "scale=1e-9*np.abs(1/sp)**2  #Measurements Accuracy\n",
     "\n",
-    "z_accumulated = [\n",
-    "z[0],                 # Node 1: z[0] (impedance between source and node 1)\n",
-    "z[0] + z[1],          # Node 2: z[0] + z[1] (accumulated impedance to node 2)\n",
-    "z[0] + z[1],          # Node 3: z[0] + z[1] (accumulated impedance to node 3, same as node 2)\n",
-    "z[0] + z[1] + z[2]    # Node 4: z[0] + z[1] + z[2] (accumulated impedance to node 4)\n",
-    "]   \n",
+    "for i in range(m):\n",
+    "     #Power in each instant \n",
+    "     #Load Flow\n",
+    "     #Voltage in Node 4\n",
+    "     #Voltage Variation\n",
+    "     #Current (Complex)\n",
+    "     #Current (Abslote)\n",
+    "     #Compute matrix A\n",
     "\n",
-    "Wk1 = z_accumulated[0] * W\n",
-    "Wk2 = z_accumulated[1] * W\n",
-    "Wk3 = z_accumulated[2] * W\n",
-    "Wk4 = z_accumulated[3] * W\n",
+    "    \n",
+    "     #Determine the variation of current i\n",
+    "     #di=np.dot(np.dot(-Atrans,np.linalg.inv(np.dot(A,Atrans))),dv)  #Min-norm sol.\n",
     "\n",
-    "gamma1 = np.array([0, 0, al**2])\n",
-    "gamma2 = np.array([0, al, 0])\n",
-    "gamma3 = np.array([1, 0, 0])\n",
+    "      #Save the result in a vector\n",
+    "    \n",
+    "      #Verification considering the obtained values\n",
     "\n",
-    "# Fill the entire A matrix (3x4)\n",
-    "# Phase a (row 0)\n",
-    "A[0,0] = np.dot(Wk1[0], gamma1)\n",
-    "A[0,1] = np.dot(Wk2[0], gamma2)\n",
-    "A[0,2] = np.dot(Wk3[0], gamma3)\n",
-    "A[0,3] = np.dot(Wk4[0], gamma1)\n",
+    "print ('i0\\n',sp,'\\n')\n",
     "\n",
-    "# Phase b (row 1)\n",
-    "A[1,0] = np.dot(Wk1[1], gamma1)\n",
-    "A[1,1] = np.dot(Wk2[1], gamma2)\n",
-    "A[1,2] = np.dot(Wk3[1], gamma3)\n",
-    "A[1,3] = np.dot(Wk4[1], gamma1)\n",
+    "print ('A\\n',A,'\\n')\n",
     "\n",
-    "# Phase c (row 2)\n",
-    "A[2,0] = np.dot(Wk1[2], gamma1)\n",
-    "A[2,1] = np.dot(Wk2[2], gamma2)\n",
-    "A[2,2] = np.dot(Wk3[2], gamma3)\n",
-    "A[2,3] = np.dot(Wk4[2], gamma1)\n",
-    "\n",
-    "print('A\\n',A,'\\n')\n",
-    "\n",
-    "# Reshape zv to be 2D (1×3) before concatenation\n",
-    "zv_reshaped = zv.reshape(1, 3)\n",
-    "# Now concatenate along axis=0 (adding as a new row)\n",
-    "dv = np.concatenate((v0, zv_reshaped), axis=0)\n",
-    "print(\"shape of dv after concatenation:\", dv.shape)\n",
-    "\n",
-    "# Transpose to get the expected shape for further calculations\n",
-    "dv = dv.T\n",
-    "print(\"shape of dv after transpose:\", dv.shape)\n",
-    "\n",
-    "print('dv\\n', dv, '\\n')\n",
-    "\n",
-    "Atrans = A.T\n",
-    "\n",
-    "# Escala de regularização baseada em 1 / |i0|^2\n",
-    "scale = 1 / np.abs(sp)**2\n",
-    "\n",
-    "\n",
-    "D = np.diag(scale)\n",
-    "\n",
-    "print ('D\\n',D,'\\n')\n",
-    "\n",
-    "print(\"Shape of dv:\", dv.shape)\n",
-    "\n",
-    "\n",
-    "di = np.dot(np.linalg.inv(np.dot(Atrans,A)+lambda_*D),np.dot(Atrans,dv))\n",
-    "print ('di\\n',di,'\\n')\n"
+    "print ('di\\n',dx,'\\n')"
    ]
   },
   {
@@ -522,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -536,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
